# discharge-planning

./: .env.example  .gitignore  auth0_oidc.py  db.py  main.py  migrate_json_users.py  orchestrator.py  pyproject.toml  requirements-test.txt  requirements.txt  run_web.py  sample_patient.py  sample_patients.py  tcm_module.py  vercel.json  web_app.py
agents/: __init__.py  barrier_extraction.py  base_agent.py  care_needs.py  clinical_assessment.py  coordinator.py  insurance_authorization.py  medication_reconciliation.py  predictive_los.py  social_determinants.py
api/: index.py
data/: ca_zips.csv
db/: __init__.py  connection.py  directory.py  drg_reference_data.py  milestones.py  milestones_catalog.py  patients.py  referrals.py  roi.py
docs/: 00-overview.md  README.md  api-reference.md  data-model.md  ehr-writeback.md  features.md  screens-core.md  screens-tools.md
fhir/: __init__.py  auth.py  client.py  ehr_config.py  normalizers.py  schemas.py
migrations/: 001_multi_tenant_base.sql  002_migrate_existing_users.sql  003_audit_log_mrn_email.sql  004_sso_users.sql  tcm_module.sql
models/: los_model.joblib
pages/: launch.jsx
scripts/: generate_icons.py  seed_drg_reference.py  train_los_model.py
services/: directory_sync.py  eligibility.py  referral_delivery.py  referral_packet.py  roi_engine.py
static/: cdph-compliance.html  discharge-summary-generator.html  hrrp-flagging.html  imm-prompt-system.html  index.html  login.html  manifest.json  mobile.css  multilingual-prompt-system.html  my-patients.html  offline.html  patient-detail.html  patient-select.js  (+15 more)
(+32 files in other folders)
