[project]
name = "discharge-planning"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "limits>=3.13.0",
    "redis>=5.0.0",
    "upstash-redis>=1.1.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.0",
    # Upper bound pinned to match the committed los_model.joblib pickle (see
    # requirements.txt). Bump only alongside a model retrain.
    "scikit-learn>=1.9.0,<1.10",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = [
    "--cov=web_app",
    "--cov=orchestrator",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
    "--tb=short",
]

[tool.coverage.run]
branch = true
concurrency = ["thread"]
# Store source paths relative to the repo root so the PR coverage-comment
# action can resolve them (otherwise: "No source for code: orchestrator.py").
relative_files = true
omit = [
    "tests/*",
    "sample_patient.py",
    "run_web.py",
    "main.py",
    "fhir/*",
    "agents/*",
    "utils/*",
    "api/*",
]

[tool.coverage.report]
show_missing = true
